adding swagger and jwt login user

--- a/testproject/src/main/resources/application.properties
+++ b/testproject/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=testproject
+
+spring.data.mongodb.uri=mongodb+srv://aspdev:NI7OgN2EaVATZAaA@aspdev-01.kxv8s.mongodb.net/testdb?retryWrites=true&w=majority&appName=aspdev-01
+
+
+spring.datasource.algorithmkey=asdfafsafa-dfdfgdfgd-xvxcxvxxv
+spring.datasource.issuer=hritik@1234
+spring.datasource.expiry-duration=36000
